fixing sum to zero post

--- a/content/post/mental-health.Rmd
+++ b/content/post/mental-health.Rmd
@@ -2,7 +2,7 @@
 title: "Mental health -- it is important"
 author: "Drew Tyre"
 date: '2018-02-20'
-output: word_document
+output: html_document
 slug: mental-health
 summary: "Awareness of students' mental health is growing in academia right now. Unsurprisingly, faculty suffer mental illness too, and many do not seek help from their institutions. The fear that disclosure, even to the disability office, will have negative effects on one's professional career is a common reason for not seeking help."
 tags: [mental health, higher ed]
